<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sections.SectionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />


        <LinearLayout
            android:id="@+id/btnStarters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onStartersBtnClicked"
            android:background="@color/purple_200"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_starters"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvItemStarters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_select_item"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvPriceStarters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_item_empty"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:id="@+id/btnMainCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:onClick="onMainCoursesBtnClicked"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_main_courses"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvItemMainCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_select_item"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvPriceMainCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_item_empty"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:id="@+id/btnDesserts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:onClick="onDessertsBtnClicked"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_desserts"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvItemDesserts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_select_item"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"/>


            <TextView
                android:id="@+id/tvPriceDesserts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_item_empty"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_total_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvPriceMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_item_empty"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>